# rust_voxel_engine

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  chunk.rs  debug.rs  game.rs  lib.rs  main.rs  old_main.rs  player.rs  position.rs  terrain.rs  voxel.rs  window.rs  world.rs  world_manager.rs
src/chunk/: components.rs  mod.rs  resources.rs  systems.rs  world_manager.rs
src/chunk/mesh/: mod.rs
src/mesh/: greedy_mesh.rs  mod.rs
src/mesher/: face.rs  mod.rs  side.rs
src/player/: mod.rs  resources.rs  systems.rs
src/world/: block.rs  mod.rs  old_chunk.rs  voxel_data.rs  world.rs
src/world/chunk/: chunk_manager.rs  chunks.rs  mesh.rs  mod.rs
