[package]
name = "bevy_voxel_game"
version = "0.0.1"
edition = "2021"

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.18.0"
futures-lite = "1.12.0"
noise = "0.8.2"
tokio = { version = "1.26.0", features = ["full"] }
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true